# GTest_FinalExercise

./: CMakeLists.txt  Test
include/: BankAccount.hpp  IRateProvider.hpp
src/: BankAccount.cpp  Utils.cpp
test/: testBankAccount.cpp  testUtils.cpp  test_main.cpp
